[package]
name = "backlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["macros", "fs", "rt-multi-thread"] }
warp = "0.3.2"
bytes = "1.1.0"
futures = "0.3.21"
notify = "4.0.17"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"